# MoneyFlow

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1769f4266b02_init_all_tables.py  205368a35280_initial_schema_products_purchases_price_.py
scripts/: app.py  db.py
src/: config.py  db.py
src/models/: car.py  category.py  product.py  purchase.py  subscription.py
src/moneyflow/: __init__.py  config.py  db.py  db_check.py  main.py
src/moneyflow/models/: __init__.py  base.py  shop.py
src/moneyflow/repositories/: product_repo.py  purchase_repo.py
src/moneyflow/ui/: car.py  dashboard.py  products.py  purchases.py  settings.py
src/ui/: subscriptions.py
